# Computer_Graphics_Practicals

./: README.md
Installation_Guide/: glad.c  main  main.cpp  makefile
OpenGL/: CMakeLists.txt
OpenGL/src/: a.out  glad.c  hello_triangle.cpp  main.c
Practical_1/: Matrix.cpp  Matrix.h  Vector.cpp  Vector.h  main  main.cpp
Practical_2/: Car.cpp  Car.h  Circle.cpp  Circle.h  FragmentShader.glsl  MathExceptions.h  Matrix.h  Rectangle.cpp  Rectangle.h  Shape.h  Triangle.cpp  main  main.cpp  makefile
Practical_3/: Box.cpp  Box.h  Boxes.cpp  Boxes.h  Circle.cpp  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Plane.cpp  Plane.h  Shader.cpp  Shape.cpp  Shape.h  Triangle.cpp  TriangularPrism.cpp  TriangularPrism.h  main  main.cpp  makefile
Practical_4/: Box.cpp  Matrix.cpp  Rectangle.cpp  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Triangle.h  VertexShader.glsl  main  main.cpp  makefile
